// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the unexpected error alert component renders as expected if there is an error and not saving 1`] = `
<div
  aria-live="polite"
>
  <Dialog
    ariaCloseLabel="Close modal dialog"
    closeButtonVariation="transparent"
    closeText="Close"
    escapeExitDisabled={false}
    heading="Unable to save changes!"
    onExit={[Function]}
    underlayClickExits={false}
  >
    <p>
      Your changes aren't being saved. Verify your internet connection and try saving your changes again in a few minutes by clicking on the save button. If you refresh your browser without saving, changes made after this message appeared will be lost.
    </p>
    <p>
      If your internet connection is working and this message persists for more than 5 minutes, please contact us at 
      <a
        href="mailto:CMS-EAPD@cms.hhs.gov"
      >
        CMS-EAPD@cms.hhs.gov
      </a>
      .
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        component="button"
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        Save
      </Button>
    </p>
  </Dialog>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is and error and is saving 1`] = `
<div
  aria-live="polite"
>
  <Dialog
    ariaCloseLabel="Close modal dialog"
    closeButtonVariation="transparent"
    closeText="Close"
    escapeExitDisabled={false}
    heading="Unable to save changes!"
    onExit={[Function]}
    underlayClickExits={false}
  >
    <p>
      Your changes aren't being saved. Verify your internet connection and try saving your changes again in a few minutes by clicking on the save button. If you refresh your browser without saving, changes made after this message appeared will be lost.
    </p>
    <p>
      If your internet connection is working and this message persists for more than 5 minutes, please contact us at 
      <a
        href="mailto:CMS-EAPD@cms.hhs.gov"
      >
        CMS-EAPD@cms.hhs.gov
      </a>
      .
    </p>
    <p
      className="ds-u-text-align--right ds-u-margin-bottom--0"
    >
      <Button
        component="button"
        onClick={[MockFunction]}
        type="button"
        variation="primary"
      >
        <Spinner />
         Saving
      </Button>
    </p>
  </Dialog>
</div>
`;

exports[`the unexpected error alert component renders as expected if there is no error and not saving 1`] = `
<div
  aria-live="polite"
/>
`;
